--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "scripts": {
     "dev": "gatsby develop -p 9988 -o",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   }
 }
