--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.63",
     "gatsby-plugin-mdx": "^1.2.40",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-styled-components": "^3.3.11",
+    "gatsby-plugin-typography": "^2.5.11",
     "gatsby-source-filesystem": "^2.3.30",
     "gh-pages": "^3.1.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "react-typography": "^0.16.19",
+    "styled-components": "^5.2.0",
+    "typography": "^0.16.19",
+    "typography-theme-lincoln": "^0.16.19"
   },
   "scripts": {
     "dev": "gatsby develop -p 9988 -o",
