--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.0",
-    "typography": "^0.16.19",
-    "typography-theme-lincoln": "^0.16.19"
+    "typography": "^0.16.19"
   },
   "scripts": {
     "dev": "gatsby develop -p 9988 -o",
